--- a/config/database.yml
+++ b/config/database.yml
@@ -23,13 +23,13 @@ default: &default
 
 development:
   <<: *default
-  database: bianfu-sms-api_development
+  database: sms_api_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: bianfu-sms-api
+  #username: sms_api
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: bianfu-sms-api_test
+  database: sms_api_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: bianfu-sms-api_production
-  username: bianfu-sms-api
-  password: <%= ENV['BIANFU-SMS-API_DATABASE_PASSWORD'] %>
+  database: sms_api_production
+  username: sms_api
+  password: <%= ENV['SMS_API_DATABASE_PASSWORD'] %>
